# udaan-relational-database

./: .gitignore  ARCHITECTURE.md  CHANGES.md  Cargo.toml  Dockerfile  EXAMPLES.md  LICENSE  README.md  benchmark_result.json  design-choices.md  implementation.md  problem-statement.md  prompts.md  writeup.md
.github/workflows/: ci.yml
adapter/: adapter.py
bench-harness/: .gitignore  README.md
bench-harness/bench-p01-crdt/: README.md  adapter.py  assertions.py  harness.py  l3_sample.json  run.py  self_check.py
bench-harness/bench-p01-crdt/adapters/: anvil.py  dummy.py
bench-harness/bench-p01-crdt/scenarios/: cell_level.py  chaos.py  randomized.py  reference.py
bench-harness/bench-p01-crdt/scenarios/stretch/: __init__.py  composite_uniqueness.py  high_density.py  long_run.py  multi_level_fk.py
crates/adapter/: Cargo.toml
crates/adapter/src/: engine.rs  main.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: lib.rs  metrics.rs
crates/benchmark/tests/: partition_simulation.rs  randomized_sync.rs  snapshot_validation.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/crdt/: Cargo.toml
crates/crdt/src/: clock.rs  lib.rs  merge.rs  tombstone.rs  uniqueness.rs
crates/gc/: Cargo.toml
crates/gc/src/: lib.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  peer_session.rs  transport.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs
crates/sql/: Cargo.toml
crates/sql/src/: executor.rs  lib.rs  parser.rs  schema.rs  values.rs
crates/storage/: Cargo.toml
crates/storage/src/: engine.rs  lib.rs  schema_store.rs  serialization.rs
crates/sync/: Cargo.toml
crates/sync/src/: delta.rs  lib.rs  session.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: lib.rs
scripts/: peer_a.py  peer_b.py  peer_c.py  peer_d.py  sync_demo.py
