[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
crdt = { path = "../crdt" }
storage = { path = "../storage" }
replication = { path = "../replication" }
sync = { path = "../sync" }
hashing = { path = "../hashing" }
sql = { path = "../sql" }
index = { path = "../index" }
