[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
