[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core" }
crdt = { path = "../crdt" }
storage = { path = "../storage" }
sync = { path = "../sync" }
sql = { path = "../sql" }
hashing = { path = "../hashing" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = { workspace = true }
