[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core" }
crdt = { path = "../crdt" }
storage = { path = "../storage" }
replication = { path = "../replication" }
sync = { path = "../sync" }
sql = { path = "../sql" }
index = { path = "../index" }
hashing = { path = "../hashing" }
query = { path = "../query" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
wasm-bindgen = { workspace = true }
